// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`action creators > startCreatingTransaction > pushes the transaction and dispatches the new transaction and updated user 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "error/setError",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "name": "user",
    },
    "type": "[USER] Loaded_Details",
  },
  {
    "payload": [
      {
        "id": 5,
        "user": {
          "name": "user",
        },
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`action creators > startDeletingTransaction > updates the transaction and dispatches the new transaction and updated user 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "error/setError",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "name": "user",
    },
    "type": "[USER] Loaded_Details",
  },
  {
    "payload": [
      {
        "id": 5,
        "user": {
          "name": "user",
        },
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`action creators > startLoadingTransactions > pushes the transaction and dispatches the new transaction and updated user 1`] = `
[
  {
    "payload": {
      "GLOBAL_LOADER": true,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": {
      "GLOBAL_ERROR": "",
    },
    "type": "error/setError",
  },
  {
    "payload": {
      "GLOBAL_LOADER": false,
    },
    "type": "loader/setLoader",
  },
  {
    "payload": [
      {
        "id": 2,
      },
      {
        "id": 3,
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`transaction reducer > with a transactionsLoaded action > merges transaction to state 1`] = `
{
  "2": {
    "id": 2,
  },
  "3": {
    "id": 3,
  },
}
`;
